# refl

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: macos.brew.llvm.toolchain.cmake
data/: reflect.h  test.cpp
src/: CMakeLists.txt  main.cpp
